# RobotFlier

./: .clang-format  .gitignore  CMakeLists.txt  CPPLINT.cfg  Conceptart.pdn  Makefile.win  README.md  Robot Flier.cbp  Robot Flier.dev  RobotFlier.cbp  Robot_Flier_private.h  Robot_Flier_private.rc  _asset_manager_8h_source.html  _asteroid_8h_source.html  _audio_service_8h_source.html  _background_8h_source.html  _bomb_8h_source.html  _button_8h_source.html  _comet_8h_source.html  _debris_8h_source.html  _debug_logger_8h_source.html  _default_audio_service_8h_source.html  _energy_8h_source.html  _engine_8h_source.html  _entity_spawner_8h_source.html  _exceptions_8h_source.html  _font_8h_source.html  _game_8h_source.html  _game_hud_8h_source.html  _game_object_8h_source.html  _high_scores_8h_source.html  _init_8h_source.html  _input_8h_source.html  _intro_8h_source.html  _joystick_codes_8h_source.html  _joystick_state_8h_source.html  _keyboard_state_8h_source.html  _label_8h_source.html  _locator_8h_source.html  _logger_8h_source.html  (+185 more)
.github/: test-linux.yml
.github/workflows/: build-linux.yml  codeql-analysis.yml  deploy-docs.yml  deploy.yml  test-build.yml  test-linux.yml
include/: ScoreTable.h  asteroid.h  bomb.h  button.h  comet.h  debrie.h  energy.h  game.h  game_object.h  globals.h  init.h  intro.h  joystickListener.h  keyListener.h  menu.h  mouseListener.h  particle.h  powerup.h  robot.h  state.h  tools.h
include/entities/: Debris.h  GameObject.h  Particle.h  Powerup.h  Robot.h
include/input/: keyListener.h
old/entities/: Background.cpp  Background.h  Energy.h  EntitySpawner.cpp  GameHud.h  PauseMenu.h  Robot.cpp
old/entities/debris/: Asteroid.h  Comet.cpp
old/entities/menu/: HighScores.h  MouseRocket.cpp
old/entities/powerups/: PowerStar.h  Powerup.h
packs/: Untitled.pdn  lose.pdn  tutorial.pdn
pdn files/: Endgame screen.pdn  help.pdn  menu.pdn  options.pdn  title.pdn  title_darker.pdn  ui_game_end.pdn  wip.pdn
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  (+37 more)
src/: ScoreTable.cpp  asteroid.cpp  bomb.cpp  button.cpp  comet.cpp  debrie.cpp  energy.cpp  game.cpp  game_object.cpp  globals.cpp  init.cpp  intro.cpp  joystickListener.cpp  keyListener.cpp  main.cpp  menu.cpp  mouseListener.cpp  oldmain.cpp  particle.cpp  powerup.cpp  robot.cpp  state.cpp  tools.cpp
src/constants/: globals.cpp  globals.h  settings.cpp  settings.h
src/engine/: Core.cpp  Core.h  Engine.cpp  Engine.h  Locator.cpp  Locator.h  Scene.cpp  Scene.h  State.cpp  State.h
src/engine/Assets/: AssetManager.cpp  AssetManager.h
src/engine/Audio/: AudioService.cpp  AudioService.h  DefaultAudioService.cpp  DefaultAudioService.h  NullAudioService.cpp  NullAudioService.h  Sound.cpp  Sound.h  Stream.cpp  Stream.h
src/engine/Common/: Tools.cpp  Tools.h
src/engine/Display/: DisplayMode.cpp  DisplayMode.h  Window.cpp  Window.h
src/engine/Fonts/: Font.cpp  Font.h
src/engine/Input/: ActionBinder.cpp  ActionBinder.h  JoystickListener.cpp  JoystickListener.h  KeyListener.cpp  KeyListener.h  MouseListener.cpp
src/engine/Particles/: Particle.h
src/engine/Random/: RandomGenerator.cpp  RandomGenerator.h
src/engine/Settings/: SettingManager.cpp  SettingManager.h
src/engine/Textures/: Texture.cpp  Texture.h
src/engine/UI/: Button.cpp  Button.h  CheckBox.cpp  CheckBox.h  Label.h  UIElement.cpp  UIElement.h  UIHandler.cpp  UIHandler.h
src/engine/assets/: AssetManager.cpp  AssetManager.h
src/engine/audio/: AudioService.cpp  AudioService.h  DefaultAudioService.cpp  DefaultAudioService.h  NullAudioService.cpp  Sound.cpp  Sound.h  Stream.cpp  Stream.h
src/engine/common/: Exceptions.h  Tools.h  stringFns.h
src/engine/display/: Window.cpp  Window.h
src/engine/entities/: GameObject.cpp  GameObject.h  Sprite.cpp  Sprite.h
src/engine/fonts/: Font.cpp  Font.h
src/engine/helpers/: stringFns.h
src/engine/input/: Input.cpp  MouseListener.cpp  MouseListener.h
src/engine/logging/: DebugLogger.cpp  Logger.cpp
src/engine/particles/: Particle.cpp
src/engine/random/: RandomGenerator.cpp  RandomGenerator.h
src/engine/scene/: Scene.cpp  Scene.h
src/engine/settings/: SettingManager.cpp  SettingManager.h
src/engine/textures/: Texture.cpp  Texture.h
src/engine/ui/: Button.cpp  Label.cpp  UIElement.cpp
src/entities/: Background.cpp  Background.h  Debris.cpp  Debris.h  DieMenu.cpp  DieMenu.h  Energy.cpp  Energy.h  EntitySpawner.cpp  EntitySpawner.h  GameHud.cpp  GameHud.h  GameObject.cpp  GameObject.h  Particle.cpp  Particle.h  PauseMenu.cpp  PauseMenu.h  Powerup.cpp  Powerup.h  Robot.cpp  Robot.h
src/entities/debris/: Asteroid.cpp  Asteroid.h  Bomb.cpp  Bomb.h  Comet.cpp  Comet.h  Debris.cpp  Debris.h
src/entities/menu/: HighScores.cpp  HighScores.h  MouseRocket.cpp  MouseRocket.h  ScoreTable.cpp  ScoreTable.h  SettingsMenu.cpp  SettingsMenu.h
src/entities/powerups/: Magnet.cpp  Magnet.h  PowerStar.cpp  PowerStar.h  Powerup.cpp  Powerup.h
src/helpers/: stringFns.cpp  stringFns.h  tools.cpp  tools.h
src/input/: joystickListener.cpp  joystickListener.h  keyListener.cpp  keyListener.h  mouseListener.cpp  mouseListener.h
src/scenes/: Game.cpp  Game.h  Init.cpp  Init.h  Intro.cpp  Intro.h  MainGame.cpp  MainGame.h  Menu.cpp  Menu.h  ScoreTable.cpp  ScoreTable.h
src/states/: Game.cpp  Game.h  Init.cpp  Init.h  Intro.cpp  Intro.h  Menu.cpp  Menu.h  ScoreTable.cpp  ScoreTable.h  State.cpp  State.h  game.cpp  game.h  init.h  intro.h  menu.cpp  menu.h
src/tests/: main.cpp
tests/: main.cpp
